## Added - UE4関連のメモ - UECPPTool

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
@@ -8,123 +8,106 @@
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="card.css" rel="stylesheet" />
 <style>
-      div { /*セレクタに font-family を指定*/
-        font-family: 'M+PLUS+Rounded+1c|Nanum+Gothic|Roboto', sans-serif;
-        font-size: 16px;
-      }
-    </style>
-    <style>
-
+div {
+  font-family: 'M+PLUS+Rounded+1c|Nanum+Gothic|Roboto', sans-serif;
+  font-size: 16px;
+}
 </style>
+
 <body>
+
 <div id="container">
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.5/marked.min.js"></script>
-<script>
-var markdown = (function() {/*
 
-# hananoki.github.io
-
-[GitHub](https://github.com/hananoki)  [Twitter](https://twitter.com/kinohanya)
-
-作ったものいろいろ。
-
-## Qtで作ったツール
-
-### vcpkg-gui
-
-- vcpkgをGUI上でポチポチ操作するツールです
-
-![](img/vcpkg.gif)
-
-[ダウンロード](arcive/vcpkg-gui-x64.7z)
-
-### Utotribyu
-
-- 画像をカタログ表示してウットリするビューア
-- フォルダ以下全てを検索するオプションで根こそぎカタログ
-- 対応画像形式
+<h1 id="hananoki.github.io">hananoki.github.io</h1>
+<p><a href="https://github.com/hananoki">GitHub</a> | <a
+href="https://twitter.com/kinohanya">Twitter</a> | <a
+href="unreal.html">UE4関連のメモ</a></p>
+<p>作ったものいろいろ。</p>
+<h2 id="qtで作ったツール">Qtで作ったツール</h2>
+<h3 id="vcpkg-gui">vcpkg-gui</h3>
+<ul>
+<li>vcpkgをGUI上でポチポチ操作するツールです</li>
+</ul>
+<p><img src="img/vcpkg.gif" /></p>
+<p><a href="arcive/vcpkg-gui-x64.7z">ダウンロード</a></p>
+<h3 id="utotribyu">Utotribyu</h3>
+<ul>
+<li>画像をカタログ表示してウットリするビューア</li>
+<li>フォルダ以下全てを検索するオプションで根こそぎカタログ</li>
+<li>対応画像形式
 BMP,GIF,JPG,PNG,PBM,PGM,PPM,XBM,XPM,ICNS,JP2,TGA,TIFF,WBMP,WEBP
-,PDF,DDS,XYZ
-- zip内の画像にも対応、zipのみ
-
-![](img/Utotribyu.gif)
-
-[ダウンロード](arcive/Utotribyu-64.7z)
-
-### UECPPTool
-
-- UnrealC++の作業を幾分かラクにするツール
-
-![](img/UECPPTool.jpg)
-
-### ssfM
-
-- エクスプローラみたいな何か
-  - イマイチな出来なので封印中
-
-![](img/ssfM.jpg)
-
-### Qune
-
-- 某Tunesみたいなもの
-
-![](img/Qune.jpg)
-
-## Unreal Engine
-<iframe width="940" height="540" src="https://www.youtube.com/embed/IxNDgWshey8?&autoplay=1"frameborder="0" allowfullscreen></iframe>
-<iframe width="940" height="540" src="https://www.youtube.com/embed/WVd2SLO9_74?&autoplay=1"frameborder="0" allowfullscreen></iframe>
-<iframe width="940" height="540" src="https://www.youtube.com/embed/QJqjQoUZqHk?&autoplay=1"frameborder="0" allowfullscreen></iframe>
-
-
-## Unity
-
-<iframe frameborder="0" src="https://itch.io/embed/691126" width="552" height="167"><a href="https://hananoki.itch.io/block-connect">Block Connect by hananoki</a></iframe>
-<iframe frameborder="0" src="https://itch.io/embed/679865" width="552" height="167"><a href="https://hananoki.itch.io/select10">select10 by hananoki</a></iframe>
-
+,PDF,DDS,XYZ</li>
+<li>zip内の画像にも対応、zipのみ</li>
+</ul>
+<p><img src="img/Utotribyu.gif" /></p>
+<p><a href="arcive/Utotribyu-64.7z">ダウンロード</a></p>
+<h3 id="uecpptool"><a href="UECPPTool.html">UECPPTool</a></h3>
+<p>UnrealC++の作業を幾分かラクにするツール</p>
+<p><img src="img/UECPPTool.jpg" /></p>
+<h3 id="ssfm">ssfM</h3>
+<ul>
+<li>エクスプローラみたいな何か
+<ul>
+<li>イマイチな出来なので封印中</li>
+</ul></li>
+</ul>
+<p><img src="img/ssfM.jpg" /></p>
+<h3 id="qune">Qune</h3>
+<ul>
+<li>某Tunesみたいなもの</li>
+</ul>
+<p><img src="img/Qune.jpg" /></p>
+<h2 id="unreal-engine">Unreal Engine</h2>
+<iframe width="940" height="540" src="https://www.youtube.com/embed/IxNDgWshey8?&amp;autoplay=1" frameborder="0" allowfullscreen>
+</iframe>
+<iframe width="940" height="540" src="https://www.youtube.com/embed/WVd2SLO9_74?&amp;autoplay=1" frameborder="0" allowfullscreen>
+</iframe>
+<iframe width="940" height="540" src="https://www.youtube.com/embed/QJqjQoUZqHk?&amp;autoplay=1" frameborder="0" allowfullscreen>
+</iframe>
+<h2 id="unity">Unity</h2>
+<iframe frameborder="0" src="https://itch.io/embed/691126" width="552" height="167">
+<a href="https://hananoki.itch.io/block-connect">Block Connect by
+hananoki</a>
+</iframe>
+<iframe frameborder="0" src="https://itch.io/embed/679865" width="552" height="167">
+<a href="https://hananoki.itch.io/select10">select10 by hananoki</a>
+</iframe>
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/bombombomb)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">https://unityroom.com/games/bombombomb</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">BomBomBomb | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
 <a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/icon_20201230_221610.png)">
 </div></a></span></div>
-
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/caravanstars)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">https://unityroom.com/games/caravanstars</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">弾幕G獄 | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
 <a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/icon_20200824_212925.gif)">
 </div></a></span></div>
-
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/caravanstars)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">https://unityroom.com/games/caravanstars</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">Caravan Stars | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
 <a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/Screenshot_5.png)">
 </div></a></span></div>
-
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/poker_rush)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/poker_rush" rel = "nofollow" target = "_blank">https://unityroom.com/games/poker_rush</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/poker_rush" rel = "nofollow" target = "_blank">PokerRush | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
 <a href = "https://unityroom.com/games/poker_rush" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/ScreenShot_512x512_2019-10-23_02-45-41.png)">
 </div></a></span></div>
-
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/sf-fighter)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/sf-fighter" rel = "nofollow" target = "_blank">https://unityroom.com/games/sf-fighter</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/sf-fighter" rel = "nofollow" target = "_blank">SF Fighter | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
 <a href = "https://unityroom.com/games/sf-fighter" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/ScreenShot_960x540_2019-09-18_20-43-59.png)">
 </div></a></span></div>
-
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/block_connect)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/block_connect" rel = "nofollow" target = "_blank">https://unityroom.com/games/block_connect</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/block_connect" rel = "nofollow" target = "_blank">Block Connect | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
 <a href = "https://unityroom.com/games/block_connect" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/icon.png)">
 </div></a></span></div>
-
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/select10)"></div><div class = "bcard-url">
 							<a href = "https://unityroom.com/games/select10" rel = "nofollow" target = "_blank">https://unityroom.com/games/select10</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/select10" rel = "nofollow" target = "_blank">select10 | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
@@ -132,10 +115,7 @@ BMP,GIF,JPG,PNG,PBM,PGM,PPM,XBM,XPM,ICNS,JP2,TGA,TIFF,WBMP,WEBP
 <div class = "bcard-img" style = "background-image: url(img/ScreenShot_640x360_2018-11-22_22-32-14.png)">
 </div></a></span></div>
 
+</div>
 
-*/}).toString().match(/\/\*([^]*)\*\//)[1];
-  var md = marked(markdown);
-  $("#container").append(md);
-</script>
 </body>
 </html>
