--- a/UECPPTool.html
+++ b/UECPPTool.html
@@ -2,17 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<link href="https://rawgithub.com/jasonm23/markdown-css-themes/gh-pages/markdown7.css" rel="stylesheet"></link>
 </head>
 <title>hananoki.github.io</title>
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
-<link href="card.css" rel="stylesheet" />
-<style>
-div {
-  font-family: 'M+PLUS+Rounded+1c|Nanum+Gothic|Roboto', sans-serif;
-  font-size: 16px;
-}
-</style>
+<link href="css/markdown7.css" rel="stylesheet"></link>
+<link href="css/card.css" rel="stylesheet"></link>
 
 <body>
 
