--- a/index.html
+++ b/index.html
@@ -2,17 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<link href="https://rawgithub.com/jasonm23/markdown-css-themes/gh-pages/markdown7.css" rel="stylesheet"></link>
 </head>
 <title>hananoki.github.io</title>
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
-<link href="card.css" rel="stylesheet" />
-<style>
-div {
-  font-family: 'M+PLUS+Rounded+1c|Nanum+Gothic|Roboto', sans-serif;
-  font-size: 16px;
-}
-</style>
+<link href="css/markdown7.css" rel="stylesheet"></link>
+<link href="css/card.css" rel="stylesheet"></link>
 
 <body>
 
@@ -22,7 +16,6 @@ div {
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
 href="unreal.html">UE4関連のメモ</a></p>
-<p>作ったものいろいろ。</p>
 <h2 id="qtで作ったツール">Qtで作ったツール</h2>
 <h3 id="vcpkg-gui">vcpkg-gui</h3>
 <ul>
@@ -78,10 +71,10 @@ hananoki</a>
 <a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/icon_20201230_221610.png)">
 </div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/caravanstars)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">https://unityroom.com/games/caravanstars</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">弾幕G獄 | フリーゲーム投稿サイト unityroom</a>
+<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/danmaku_g)"></div><div class = "bcard-url">
+							<a href = "https://unityroom.com/games/danmaku_g" rel = "nofollow" target = "_blank">https://unityroom.com/games/danmaku_g</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/danmaku_g" rel = "nofollow" target = "_blank">弾幕G獄 | フリーゲーム投稿サイト unityroom</a>
 </div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">
+<a href = "https://unityroom.com/games/danmaku_g" rel = "nofollow" target = "_blank">
 <div class = "bcard-img" style = "background-image: url(img/icon_20200824_212925.gif)">
 </div></a></span></div>
 <div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/caravanstars)"></div><div class = "bcard-url">
