--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
 href="unreal.html">UE4関連のメモ</a></p>
+<p><a href="kg/2022-09-30.html">2022-09-30 Delayノードのキャンセル
+(悩)</a></p>
+<p><a href="kg/2022-09-29.html">2022-09-29
+自分でSpawnActorしたカメラがアクティブな表示にならない</a></p>
 <h2 id="qtで作ったツール">Qtで作ったツール</h2>
 <h3 id="vcpkg-gui">vcpkg-gui</h3>
 <ul>
