--- a/UECPPTool.html
+++ b/UECPPTool.html
@@ -14,7 +14,8 @@
 
 <h2 id="uecpptool">UECPPTool</h2>
 <p>UnrealC++の作業を幾分かラクにするツール</p>
-<p><a href="arcive/UECPPTool-x64.7z">ダウンロード</a></p>
+<p>2022-10-02 rev.43<br />
+<a href="arcive/UECPPTool-x64.7z">ダウンロード</a></p>
 <h3 id="機能">機能</h3>
 <ul>
 <li><p>VCプロジェクト生成機能ボタン</p>
