--- a/unreal.html
+++ b/unreal.html
@@ -49,6 +49,164 @@ href="https://docs.unrealengine.com/4.26/ja/ProductionPipelines/DevelopmentSetup
 </tr>
 </tbody>
 </table>
+<h2 id="アセットの命名規則に関する推奨事項"><a
+href="https://docs.unrealengine.com/4.27/ja/ProductionPipelines/AssetNaming/">アセットの命名規則に関する推奨事項</a></h2>
+<h3
+id="推奨されるアセットのプレフィックス">推奨されるアセットのプレフィックス</h3>
+<blockquote>
+<p>この命名規則は、プロジェクトの設定を容易にするための推奨事項にすぎません。<br />
+プロジェクトの要件を常に優先してください。<br />
+また、実際にはプロジェクトでこれらのアセット
+タイプをすべて使用することはほとんどないと考えられます。</p>
+</blockquote>
+<table>
+<tbody>
+<tr class="odd">
+<td>アニメーション シーケンス</td>
+<td style="text-align: left;">AS</td>
+</tr>
+<tr class="even">
+<td>アニメーション ブループリント</td>
+<td style="text-align: left;">ABP</td>
+</tr>
+<tr class="odd">
+<td>アニメーション ブレンド スペース</td>
+<td style="text-align: left;">BS</td>
+</tr>
+<tr class="even">
+<td>アニメーション モンタージュ</td>
+<td style="text-align: left;">AM</td>
+</tr>
+<tr class="odd">
+<td>ウィジェット ブループリント</td>
+<td style="text-align: left;">WBP</td>
+</tr>
+<tr class="even">
+<td>カーブ テーブル</td>
+<td style="text-align: left;">CT</td>
+</tr>
+<tr class="odd">
+<td>シーケンサー エディット</td>
+<td style="text-align: left;">EDIT</td>
+</tr>
+<tr class="even">
+<td>スケルタル メッシュ</td>
+<td style="text-align: left;">SK</td>
+</tr>
+<tr class="odd">
+<td>スケルトン</td>
+<td style="text-align: left;">SKEL</td>
+</tr>
+<tr class="even">
+<td>スタティック メッシュ</td>
+<td style="text-align: left;">SM</td>
+</tr>
+<tr class="odd">
+<td>テクスチャ</td>
+<td style="text-align: left;">T</td>
+</tr>
+<tr class="even">
+<td>データ テーブル</td>
+<td style="text-align: left;">DT</td>
+</tr>
+<tr class="odd">
+<td>パーティクル システム (Cascade)</td>
+<td style="text-align: left;">PS</td>
+</tr>
+<tr class="even">
+<td>ブループリント インターフェース</td>
+<td style="text-align: left;">BI</td>
+</tr>
+<tr class="odd">
+<td>ブループリント</td>
+<td style="text-align: left;">BP</td>
+</tr>
+<tr class="even">
+<td>ポスト プロセス マテリアル</td>
+<td style="text-align: left;">PPM</td>
+</tr>
+<tr class="odd">
+<td>マテリアル</td>
+<td style="text-align: left;">M</td>
+</tr>
+<tr class="even">
+<td>マテリアル インスタンス</td>
+<td style="text-align: left;">MI</td>
+</tr>
+<tr class="odd">
+<td>メディア ソース</td>
+<td style="text-align: left;">MS</td>
+</tr>
+<tr class="even">
+<td>メディア出力</td>
+<td style="text-align: left;">MO</td>
+</tr>
+<tr class="odd">
+<td>メディア プレーヤー</td>
+<td style="text-align: left;">MP</td>
+</tr>
+<tr class="even">
+<td>メディア プロファイル</td>
+<td style="text-align: left;">MPR</td>
+</tr>
+<tr class="odd">
+<td>リグ</td>
+<td style="text-align: left;">Rig</td>
+</tr>
+<tr class="even">
+<td>リモート コントロール プリセット</td>
+<td style="text-align: left;">RCP</td>
+</tr>
+<tr class="odd">
+<td>レベル シーケンス</td>
+<td style="text-align: left;">LS</td>
+</tr>
+<tr class="even">
+<td>レベル スナップショット</td>
+<td style="text-align: left;">SNAP</td>
+</tr>
+<tr class="odd">
+<td>列挙型</td>
+<td style="text-align: left;">E</td>
+</tr>
+<tr class="even">
+<td>構造体</td>
+<td style="text-align: left;">F</td>
+</tr>
+<tr class="odd">
+<td>物理アセット</td>
+<td style="text-align: left;">PHYS</td>
+</tr>
+<tr class="even">
+<td>物理マテリアル</td>
+<td style="text-align: left;">PM</td>
+</tr>
+<tr class="odd">
+<td>Actor コンポーネント</td>
+<td style="text-align: left;">AC</td>
+</tr>
+<tr class="even">
+<td>NDisplay コンフィギュレーション</td>
+<td style="text-align: left;">NDC</td>
+</tr>
+<tr class="odd">
+<td>Niagara エミッタ</td>
+<td style="text-align: left;">FXE</td>
+</tr>
+<tr class="even">
+<td>Niagara システム</td>
+<td style="text-align: left;">FXS</td>
+</tr>
+<tr class="odd">
+<td>Niagara 関数</td>
+<td style="text-align: left;">FXF</td>
+</tr>
+<tr class="even">
+<td>OCIO プロファイル</td>
+<td style="text-align: left;">OCIO</td>
+</tr>
+</tbody>
+</table>
 <h2 id="プラグイン">プラグイン</h2>
 <p><a href="https://qiita.com/O_Y_G/items/b74f54205cfe4c6cf8f0">UE4.27.2
 プラグイン、パッケージ化時容量測定結果</a></p>
