--- a/UECPPTool.html
+++ b/UECPPTool.html
@@ -12,11 +12,41 @@
 
 <div id="container">
 
-<h2 id="uecpptool">UECPPTool</h2>
+<h1 id="uecpptool">UECPPTool</h1>
 <p>UnrealC++の作業を幾分かラクにするツール</p>
-<p>2022-10-02 rev.43<br />
+<p>2022-10-07 rev.45<br />
 <a href="arcive/UECPPTool-x64.7z">ダウンロード</a></p>
-<h3 id="機能">機能</h3>
+<h2 id="changelog">ChangeLog</h2>
+<p><strong>Rev.45</strong></p>
+<h3 id="added">Added</h3>
+<ul>
+<li>UFUNCTION,UPROPERTYの編集機能(一部のみ実装)
+<ul>
+<li>UFUNCTION<br />
+<code>BlueprintCallable</code> <code>BlueprintPure</code>
+<code>BlueprintImplementableEvent</code>
+<code>BlueprintNativeEvent</code> <code>DisplayName</code></li>
+<li>UPROPERTY<br />
+<code>EditAnyWhere</code> <code>BlueprintReadOnly</code>
+<code>BlueprintReadWrite</code> <code>DisplayName</code></li>
+<li>⚠ <code>Category</code>等対応していないものは<span
+style="color: red"><strong>上書きで消えます</strong></span></li>
+</ul></li>
+<li>ツール&gt;ActiveClassRedirectsの削除ボタンの機能を実装</li>
+</ul>
+<h3 id="changed">Changed</h3>
+<ul>
+<li>テンプレートファイルの並びを自然にした</li>
+<li>行数を表示してみた</li>
+<li>検索のコンテキストメニューを追加（未実装）</li>
+</ul>
+<h3 id="fixed">Fixed</h3>
+<ul>
+<li>Pluginsの×ボタンの位置を修正</li>
+</ul>
+<p><strong>Rev.43</strong></p>
+<p><strong>Rev.35</strong></p>
+<h2 id="機能">機能</h2>
 <ul>
 <li><p>VCプロジェクト生成機能ボタン</p>
 <ul>
