--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <h1 id="hananoki.github.io">hananoki.github.io</h1>
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
-href="unreal.html">UE4関連のメモ</a></p>
+href="unreal/memo.html">UE4関連のメモ</a></p>
+<p><a href="unreal/memo.html">2022-10-08
+「UE4関連のメモ」サイドメニューを付けた</a></p>
 <p><a href="UECPPTool.html">2022-10-07 UECPPTool rev.45</a></p>
 <p><a href="kg/2022-09-30.html">2022-09-30 Delayノードのキャンセル
 (悩)</a></p>
