--- a/unreal/asset_naming.html
+++ b/unreal/asset_naming.html
@@ -13,11 +13,13 @@
 
 <article>
 <div class="side">
-<p><a href="memo.html">UE4関連のメモ</a><br />
+<p><a href="index.html">はじめに</a></p>
+<p><a href="link.html">お役立ちリンク</a><br />
 <a href="coding_standard.html">クラス名の接頭辞</a><br />
 <a href="redirectors.html">リダイレクタ</a><br />
 <a href="asset_naming.html">アセットのプレフィックス名</a><br />
-<a href="module.html">モジュール</a></p>
+<a href="module.html">モジュール</a><br />
+<a href="notes.html">雑記</a></p>
 </div> 
 <div class="content">
 <h1 id="アセットのプレフィックス名">アセットのプレフィックス名</h1>
