--- a/unreal/link.html
+++ b/unreal/link.html
@@ -13,14 +13,16 @@
 
 <article>
 <div class="side">
-<p><a href="memo.html">UE4関連のメモ</a><br />
+<p><a href="index.html">はじめに</a></p>
+<p><a href="link.html">お役立ちリンク</a><br />
 <a href="coding_standard.html">クラス名の接頭辞</a><br />
 <a href="redirectors.html">リダイレクタ</a><br />
 <a href="asset_naming.html">アセットのプレフィックス名</a><br />
-<a href="module.html">モジュール</a></p>
+<a href="module.html">モジュール</a><br />
+<a href="notes.html">雑記</a></p>
 </div> 
 <div class="content">
-<h1 id="ue4関連のメモ">UE4関連のメモ</h1>
+<h1 id="お役立ちリンク">お役立ちリンク</h1>
 <p>気になったスライドや記事等々</p>
 <h2 id="プラグイン">プラグイン</h2>
 <p><a href="https://qiita.com/O_Y_G/items/b74f54205cfe4c6cf8f0">UE4.27.2
