--- a/unreal/coding_standard.html
+++ b/unreal/coding_standard.html
@@ -13,16 +13,18 @@
 
 <article>
 <div class="side">
-<p><a href="memo.html">UE4関連のメモ</a><br />
+<p><a href="index.html">はじめに</a></p>
+<p><a href="link.html">お役立ちリンク</a><br />
 <a href="coding_standard.html">クラス名の接頭辞</a><br />
 <a href="redirectors.html">リダイレクタ</a><br />
 <a href="asset_naming.html">アセットのプレフィックス名</a><br />
-<a href="module.html">モジュール</a></p>
+<a href="module.html">モジュール</a><br />
+<a href="notes.html">雑記</a></p>
 </div> 
 <div class="content">
 <h1 id="クラス名の接頭辞">クラス名の接頭辞</h1>
 <p><a
-href="https://docs.unrealengine.com/4.26/ja/ProductionPipelines/DevelopmentSetup/CodingStandard/">コーディング規約</a></p>
+href="https://docs.unrealengine.com/4.27/ja/ProductionPipelines/DevelopmentSetup/CodingStandard/">コーディング規約</a></p>
 <h2 id="接頭辞">接頭辞</h2>
 <ul>
 <li>接頭辞を付けていないとビルドツールがエラーを吐く<br />
