--- a/unreal/index.html
+++ b/unreal/index.html
@@ -22,18 +22,19 @@
 <a href="notes.html">雑記</a></p>
 </div> 
 <div class="content">
-<h1 id="モジュール">モジュール</h1>
+<h1 id="はじめに">はじめに</h1>
+<p>個人の見解の備忘録です。<br />
+間違い等あると思いますがそのへんはしからず。</p>
+<h2 id="環境について">環境について</h2>
 <ul>
-<li>Build.csのパラメータ<br />
-<a
-href="https://docs.unrealengine.com/4.27/ja/ProductionPipelines/BuildTools/UnrealBuildTool/ModuleFiles/">モジュール</a></li>
+<li>UnrealEngine 4.27.2<br />
+</li>
+<li>VisualStadio 2022</li>
 </ul>
-<h2 id="メモ">メモ</h2>
-<ul>
-<li>プロジェクトと同じ名前のモジュールが無いと何かとエラーが出る</li>
-<li>プロジェクト共通で使いたいものなどは別モジュールに分ける</li>
-<li>プロジェクトを別名移植とかするなら<code>ActiveGameNameRedirects</code>を検討する</li>
-</ul>
+<h2 id="内容について">内容について</h2>
+<p>基本的にUnrealC++についてのメモです。<br />
+UnrealEngineは4.26から触り始めたので、それ以前のバージョンについてはあまり知りません。<br />
+また5.0以降のバージョンはチョット重いんで触ってませんが、基本はあまり変わってなさそうなので今のところはいいかなと。</p>
 <hr />
 <p><a href="../index.html">戻る</a></p>
 
