--- a/unreal/redirectors.html
+++ b/unreal/redirectors.html
@@ -13,11 +13,13 @@
 
 <article>
 <div class="side">
-<p><a href="memo.html">UE4関連のメモ</a><br />
+<p><a href="index.html">はじめに</a></p>
+<p><a href="link.html">お役立ちリンク</a><br />
 <a href="coding_standard.html">クラス名の接頭辞</a><br />
 <a href="redirectors.html">リダイレクタ</a><br />
 <a href="asset_naming.html">アセットのプレフィックス名</a><br />
-<a href="module.html">モジュール</a></p>
+<a href="module.html">モジュール</a><br />
+<a href="notes.html">雑記</a></p>
 </div> 
 <div class="content">
 <h1 id="リダイレクタ">リダイレクタ</h1>
@@ -28,7 +30,7 @@ href="https://docs.unrealengine.com/4.27/ja/ProgrammingAndScripting/ProgrammingW
 Redirects</a></p>
 <h2 id="用途">用途</h2>
 <ul>
-<li>BPで継承したり使っている状態でC++で型名を変更すると、そのBPは使えなくなる</li>
+<li>BPで継承する等、すでに使っている状態でC++で型名を変更すると、そのBPは使えなくなる</li>
 <li>変更前の名前と変更後の名前を記載することで回避できる</li>
 </ul>
 <h2 id="問題点">問題点</h2>
