--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <h1 id="hananoki.github.io">hananoki.github.io</h1>
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
-href="unreal/memo.html">UE4の備忘録</a></p>
+href="unreal/index.html">UE4の備忘録</a></p>
 <p><a href="unreal/memo.html">2022-10-08
 「UE4関連のメモ」サイドメニューを付けた</a></p>
 <p><a href="UECPPTool.html">2022-10-07 UECPPTool rev.45</a></p>
