--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 <h1 id="hananoki.github.io">hananoki.github.io</h1>
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
-href="unreal/index.html">UE4の備忘録</a></p>
+href="unreal/index.html">UE4の備忘録</a> | <a
+href="UECPPTool/index.html">UECPPTool</a></p>
+<h2 id="更新情報">更新情報</h2>
+<p><a href="UECPPTool/index.html">2022-10-10 UECPPTool rev.49</a></p>
 <p><a href="unreal/memo.html">2022-10-08
 「UE4関連のメモ」サイドメニューを付けた</a></p>
-<p><a href="UECPPTool.html">2022-10-07 UECPPTool rev.45</a></p>
+<p><a href="UECPPTool/index.html">2022-10-07 UECPPTool rev.45</a></p>
 <p><a href="kg/2022-09-30.html">2022-09-30 Delayノードのキャンセル
 (悩)</a></p>
 <p><a href="kg/2022-09-29.html">2022-09-29
