--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
+<link href="img/favicon.png" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
-<link href="css/markdown7.css" rel="stylesheet"></link>
-<link href="css/card.css" rel="stylesheet"></link>
+<link href="css/markdown7.css" rel="stylesheet">
+<link href="css/card.css" rel="stylesheet">
 
 <body>
 
@@ -15,51 +16,21 @@
 <h1 id="hananoki.github.io">hananoki.github.io</h1>
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
-href="unreal/index.html">UE4の備忘録</a> | <a
-href="UECPPTool/index.html">UECPPTool</a></p>
+href="tools/index.html">デスクトップアプリ</a> | <a
+href="unreal/index.html">UE4の備忘録</a></p>
 <h2 id="更新情報">更新情報</h2>
-<p><a href="UECPPTool/index.html">2022-10-10 UECPPTool rev.49</a></p>
-<p><a href="unreal/memo.html">2022-10-08
+<p><a href="tools/index.html">2022-10-22
+デスクトップアプリのページを作った</a></p>
+<p><a href="tools/uecpptool.html">2022-10-10 UECPPTool rev.49</a></p>
+<p><a href="unreal/index.html">2022-10-08
 「UE4関連のメモ」サイドメニューを付けた</a></p>
-<p><a href="UECPPTool/index.html">2022-10-07 UECPPTool rev.45</a></p>
+<p><a href="tools/uecpptool.html">2022-10-07 UECPPTool rev.45</a></p>
 <p><a href="kg/2022-09-30.html">2022-09-30 Delayノードのキャンセル
 (悩)</a></p>
 <p><a href="kg/2022-09-29.html">2022-09-29
 自分でSpawnActorしたカメラがアクティブな表示にならない</a></p>
 <h2 id="qtで作ったツール">Qtで作ったツール</h2>
-<h3 id="vcpkg-gui">vcpkg-gui</h3>
-<ul>
-<li>vcpkgをGUI上でポチポチ操作するツールです</li>
-</ul>
-<p><img src="img/vcpkg.gif" /></p>
-<p><a href="arcive/vcpkg-gui-x64.7z">ダウンロード</a></p>
-<h3 id="utotribyu">Utotribyu</h3>
-<ul>
-<li>画像をカタログ表示してウットリするビューア</li>
-<li>フォルダ以下全てを検索するオプションで根こそぎカタログ</li>
-<li>対応画像形式
-BMP,GIF,JPG,PNG,PBM,PGM,PPM,XBM,XPM,ICNS,JP2,TGA,TIFF,WBMP,WEBP
-,PDF,DDS,XYZ</li>
-<li>zip内の画像にも対応、zipのみ</li>
-</ul>
-<p><img src="img/Utotribyu.gif" /></p>
-<p><a href="arcive/Utotribyu-64.7z">ダウンロード</a></p>
-<h3 id="uecpptool"><a href="UECPPTool.html">UECPPTool</a></h3>
-<p>UnrealC++の作業を幾分かラクにするツール</p>
-<p><img src="img/UECPPTool.jpg" /></p>
-<h3 id="ssfm">ssfM</h3>
-<ul>
-<li>エクスプローラみたいな何か
-<ul>
-<li>イマイチな出来なので封印中</li>
-</ul></li>
-</ul>
-<p><img src="img/ssfM.jpg" /></p>
-<h3 id="qune">Qune</h3>
-<ul>
-<li>某Tunesみたいなもの</li>
-</ul>
-<p><img src="img/Qune.jpg" /></p>
+<p><a href="tools/index.html">デスクトップアプリ</a>に移動しました</p>
 <h2 id="unreal-engine">Unreal Engine</h2>
 <iframe width="940" height="540" src="https://www.youtube.com/embed/IxNDgWshey8?&amp;autoplay=1" frameborder="0" allowfullscreen>
 </iframe>
