--- a/kg/2022-09-29.html
+++ b/kg/2022-09-29.html
@@ -4,14 +4,19 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
+<link href="../img/favicon.png" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
-<link href="../css/markdown7.css" rel="stylesheet"></link>
-<link href="../css/card.css" rel="stylesheet"></link>
+<link href="../css/side.css" rel="stylesheet">
+<link href="../css/markdown7_side.css" rel="stylesheet">
 
 <body>
 
-<div id="container">
-
+<article>
+<div class="side">
+<p><a href="2022-09-29.html">自分でSpawnActorしたカメラがアクティブな表示にならない</a></p>
+<p><a href="2022-09-30.html">Delayノードのキャンセル (悩)</a></p>
+</div> 
+<div class="content">
 <h4 id="section">2022-09-29</h4>
 <h1
 id="自分でspawnactorしたカメラがアクティブな表示にならない">自分でSpawnActorしたカメラがアクティブな表示にならない</h1>
@@ -37,6 +42,7 @@ id="自分でspawnactorしたカメラがアクティブな表示にならない
 <p><a href="../index.html">戻る</a></p>
 
 </div>
+</article>
 
 </body>
 </html>
