--- a/unreal/module.html
+++ b/unreal/module.html
@@ -1,25 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
+<link href="../img/favicon.png" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
-<link href="css/side.css" rel="stylesheet"></link>
-<link href="css/markdown7_side.css" rel="stylesheet"></link>
+<link href="../css/side.css" rel="stylesheet">
+<link href="../css/markdown7_side.css" rel="stylesheet">
 
 <body>
 
 <article>
 <div class="side">
-<p><a href="index.html">はじめに</a></p>
-<p><a href="link.html">お役立ちリンク</a><br />
-<a href="coding_standard.html">クラス名の接頭辞</a><br />
-<a href="redirectors.html">リダイレクタ</a><br />
-<a href="asset_naming.html">アセットのプレフィックス名</a><br />
-<a href="module.html">モジュール</a><br />
-<a href="notes.html">雑記</a></p>
+<a href="index.html">はじめに</a><br>
+<br>
+<a href="link.html">お役立ちリンク</a><br>
+<a href="coding_standard.html">クラス名の接頭辞</a><br>
+<a href="redirectors.html">リダイレクタ</a><br>
+<a href="asset_naming.html">アセットのプレフィックス名</a><br>
+<a href="module.html">モジュール</a><br>
+<a href="notes.html">雑記</a><br>
 </div> 
 <div class="content">
 <h1 id="モジュール">モジュール</h1>
