--- a/unreal/notes.html
+++ b/unreal/notes.html
@@ -1,25 +1,26 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
+<link href="../img/favicon.png" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
-<link href="css/side.css" rel="stylesheet"></link>
-<link href="css/markdown7_side.css" rel="stylesheet"></link>
+<link href="../css/side.css" rel="stylesheet">
+<link href="../css/markdown7_side.css" rel="stylesheet">
 
 <body>
 
 <article>
 <div class="side">
-<p><a href="index.html">はじめに</a></p>
-<p><a href="link.html">お役立ちリンク</a><br />
-<a href="coding_standard.html">クラス名の接頭辞</a><br />
-<a href="redirectors.html">リダイレクタ</a><br />
-<a href="asset_naming.html">アセットのプレフィックス名</a><br />
-<a href="module.html">モジュール</a><br />
-<a href="notes.html">雑記</a></p>
+<a href="index.html">はじめに</a><br>
+<br>
+<a href="link.html">お役立ちリンク</a><br>
+<a href="coding_standard.html">クラス名の接頭辞</a><br>
+<a href="redirectors.html">リダイレクタ</a><br>
+<a href="asset_naming.html">アセットのプレフィックス名</a><br>
+<a href="module.html">モジュール</a><br>
+<a href="notes.html">雑記</a><br>
 </div> 
 <div class="content">
 <h1 id="雑記">雑記</h1>
@@ -31,13 +32,23 @@
 <code>UGameplayStatics::FinishSpawningActor</code>は<code>FinishSpawningActor</code>時に呼ばれる</li>
 </ul></li>
 </ul>
-<h2 id="オブジェクトプーリング">オブジェクトプーリング</h2>
 <h3 id="uprojectilemovementcomponent">UProjectileMovementComponent</h3>
 <ul>
-<li>再スポーン時の処理
+<li>オブジェクトプーリング時の注意点
 <ul>
 <li><code>InitializeComponent</code>は一度しか呼んではいけない、呼ぶとクラッシュする</li>
 <li>移動方向の<code>Velocity</code>を直接初期化する</li>
+</ul></li>
+<li>ホーミングについて
+<ul>
+<li>ターゲット方向に向かって加速する
+<ul>
+<li>ホーミングさせようと数値を大きくすると、ホーミング無しの時と速度差が大きくなるため違和感がでる</li>
+</ul></li>
+<li>一定速度のホーミング
+<ul>
+<li>自前で<code>Velocity</code>を計算する</li>
+</ul></li>
 </ul></li>
 </ul>
 <h2 id="ラムダ式">ラムダ式</h2>
