--- a/tools/etc.html
+++ b/tools/etc.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -15,10 +15,11 @@
 <div class="side">
 <a href="index.html">デスクトップアプリ</a><br>
 <br>
-<a href="nkf-gui.html">nkf-gui<!-- omit in toc --></a><br>
-<a href="vcpkg-gui.html">vcpkg-gui <!-- omit in toc --></a><br>
-<a href="uecpptool.html">UECPPTool<!-- omit in toc --></a><br>
-<a href="Utotribyu.html">Utotribyu<!-- omit in toc --></a><br>
+<a href="nkf-gui.html">nkf-gui</a><br>
+<a href="vcpkg-gui.html">vcpkg-gui</a><br>
+<a href="uecpptool.html">UECPPTool</a><br>
+<a href="Utotribyu.html">Utotribyu</a><br>
+<a href="xtFOJP.html">xtFOJP</a><br>
 <br>
 <a href="etc.html">その他</a><br>
 </div> 
@@ -31,12 +32,12 @@
 <li>イマイチな出来なので封印中</li>
 </ul></li>
 </ul>
-<p><img src="img/ssfM.jpg" /></p>
+<p><img src="img/ssfM.webp" /></p>
 <h2 id="qune">Qune</h2>
 <ul>
 <li>某Tunesみたいなもの</li>
 </ul>
-<p><img src="img/Qune.jpg" /></p>
+<p><img src="img/Qune.webp" /></p>
 <hr />
 <p><a href="index.html">戻る</a></p>
 
