--- a/tools/uecpptool.html
+++ b/tools/uecpptool.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -15,22 +15,23 @@
 <div class="side">
 <a href="index.html">デスクトップアプリ</a><br>
 <br>
-<a href="nkf-gui.html">nkf-gui<!-- omit in toc --></a><br>
-<a href="vcpkg-gui.html">vcpkg-gui <!-- omit in toc --></a><br>
-<a href="uecpptool.html">UECPPTool<!-- omit in toc --></a><br>
-<a href="Utotribyu.html">Utotribyu<!-- omit in toc --></a><br>
+<a href="nkf-gui.html">nkf-gui</a><br>
+<a href="vcpkg-gui.html">vcpkg-gui</a><br>
+<a href="uecpptool.html">UECPPTool</a><br>
+<a href="Utotribyu.html">Utotribyu</a><br>
+<a href="xtFOJP.html">xtFOJP</a><br>
 <br>
 <a href="etc.html">その他</a><br>
 </div> 
 <div class="content">
-<h1 id="uecpptool">UECPPTool<!-- omit in toc --></h1>
+<h1 id="uecpptool">UECPPTool</h1>
 <p><strong>UnrealC++の作業を幾分かラクにするツール</strong></p>
 <ul>
 <li><a href="#機能">機能</a></li>
 <li><a href="#変更履歴">変更履歴</a></li>
 <li><a href="#ダウンロード">ダウンロード</a></li>
 </ul>
-<p><img src="img/UECPPTool.jpg" /></p>
+<p><img src="img/UECPPTool.webp" /></p>
 <h2 id="機能">機能</h2>
 <ul>
 <li><p>VCプロジェクト生成機能ボタン</p>
@@ -70,21 +71,19 @@
 </ul></li>
 </ul>
 <h2 id="変更履歴">変更履歴</h2>
-<h3 id="rev.49---2022-10-10">[Rev.49] -
-2022-10-10<!-- omit in toc --></h3>
-<h4 id="added">Added<!-- omit in toc --></h4>
+<h3 id="rev.49---2022-10-10">[Rev.49] - 2022-10-10</h3>
+<h4 id="added">Added</h4>
 <ul>
 <li><code>UFUNCTION</code>,<code>UPROPERTY</code>の編集機能の実装(表示されているものは一通り)</li>
 <li><code>ExpandEnumAsExecs</code>と<code>BlueprintPure</code>が同時チェックされていた場合、確認するように実装</li>
 <li>build.csの<code>CppStandardVersion</code>オプションを変更する機能を実装</li>
 </ul>
-<h4 id="changed">Changed<!-- omit in toc --></h4>
+<h4 id="changed">Changed</h4>
 <ul>
 <li><code>ModuleRules</code>のUIを<code>TreeWidget</code>ベースに変更した</li>
 </ul>
-<h3 id="rev.45---2022-10-07">[Rev.45] -
-2022-10-07<!-- omit in toc --></h3>
-<h4 id="added-1">Added<!-- omit in toc --></h4>
+<h3 id="rev.45---2022-10-07">[Rev.45] - 2022-10-07</h3>
+<h4 id="added-1">Added</h4>
 <ul>
 <li><code>UFUNCTION</code>,<code>UPROPERTY</code>の編集機能(一部のみ実装)
 <ul>
@@ -100,20 +99,18 @@ style="color: red"><strong>上書きで消えます</strong></span></li>
 </ul></li>
 <li>ツール&gt;ActiveClassRedirectsの削除ボタンの機能を実装</li>
 </ul>
-<h4 id="changed-1">Changed<!-- omit in toc --></h4>
+<h4 id="changed-1">Changed</h4>
 <ul>
 <li>テンプレートファイルの並びを自然にした</li>
 <li>行数を表示してみた</li>
 <li>検索のコンテキストメニューを追加（未実装）</li>
 </ul>
-<h4 id="fixed">Fixed<!-- omit in toc --></h4>
+<h4 id="fixed">Fixed</h4>
 <ul>
 <li>Pluginsの×ボタンの位置を修正</li>
 </ul>
-<h3 id="rev.43---2022-10-02">[Rev.43] -
-2022-10-02<!-- omit in toc --></h3>
-<h3 id="rev.35---2022-09-22">[Rev.35] -
-2022-09-22<!-- omit in toc --></h3>
+<h3 id="rev.43---2022-10-02">[Rev.43] - 2022-10-02</h3>
+<h3 id="rev.35---2022-09-22">[Rev.35] - 2022-09-22</h3>
 <h2 id="ダウンロード">ダウンロード</h2>
 <p>新しいバージョンにする場合、exeファイルの更新でOKです。</p>
 <p><a
