--- a/unreal/redirectors.html
+++ b/unreal/redirectors.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -38,7 +38,7 @@ Redirects</a></p>
 <ol type="1">
 <li>リダイレクタの記載がどんどん溜まっていく</li>
 <li>↓のエディタ機能のリダイレクタ修正では修正出来ない<br />
-<img src="img/redirecter.png" /><br />
+<img src="img/redirecter.webp" /><br />
 </li>
 <li>一時的に解決してくれるだけなので、BP等使用しているアセットを改めて保存しなおさないといつまでも古い型名で参照し続ける</li>
 <li>何か変更して保存しないと実際に保存されない</li>
