--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="img/favicon.png" rel="icon" type="image/png">
+<link href="img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="css/markdown7.css" rel="stylesheet">
 <link href="css/card.css" rel="stylesheet">
@@ -14,11 +14,22 @@
 <div id="container">
 
 <h1 id="hananoki.github.io">hananoki.github.io</h1>
+<script src="https://kit.fontawesome.com/43e3713d1d.js" crossorigin="anonymous"></script>
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
 href="tools/index.html">デスクトップアプリ</a> | <a
-href="unreal/index.html">UE4の備忘録</a></p>
+href="unreal/index.html">UE4の備忘録</a> | <a
+href="gamedev/index.html">ゲーム制作関連</a> | <a
+href="diary/2022-10-24.html">日記超</a> | <a
+href="memo/DIK.html">メモ超</a></p>
+<!--
+<script src="https://kit.fontawesome.com/43e3713d1d.js" crossorigin="anonymous"></script>
+<i class="fa-brands fa-github fa-2x"></i>
+-->
 <h2 id="更新情報">更新情報</h2>
+<p>2022-10-25 トップページから各種ページに分離した</p>
+<p><a href="diary/2022-10-24.html">2022-10-24
+いいかもしれない、WebP</a></p>
 <p><a href="tools/index.html">2022-10-22
 デスクトップアプリのページを作った</a></p>
 <p><a href="tools/uecpptool.html">2022-10-10 UECPPTool rev.49</a></p>
@@ -29,65 +40,6 @@ href="unreal/index.html">UE4の備忘録</a></p>
 (悩)</a></p>
 <p><a href="kg/2022-09-29.html">2022-09-29
 自分でSpawnActorしたカメラがアクティブな表示にならない</a></p>
-<h2 id="qtで作ったツール">Qtで作ったツール</h2>
-<p><a href="tools/index.html">デスクトップアプリ</a>に移動しました</p>
-<h2 id="unreal-engine">Unreal Engine</h2>
-<iframe width="940" height="540" src="https://www.youtube.com/embed/IxNDgWshey8?&amp;autoplay=1" frameborder="0" allowfullscreen>
-</iframe>
-<iframe width="940" height="540" src="https://www.youtube.com/embed/WVd2SLO9_74?&amp;autoplay=1" frameborder="0" allowfullscreen>
-</iframe>
-<iframe width="940" height="540" src="https://www.youtube.com/embed/QJqjQoUZqHk?&amp;autoplay=1" frameborder="0" allowfullscreen>
-</iframe>
-<h2 id="unity">Unity</h2>
-<iframe frameborder="0" src="https://itch.io/embed/691126" width="552" height="167">
-<a href="https://hananoki.itch.io/block-connect">Block Connect by
-hananoki</a>
-</iframe>
-<iframe frameborder="0" src="https://itch.io/embed/679865" width="552" height="167">
-<a href="https://hananoki.itch.io/select10">select10 by hananoki</a>
-</iframe>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/bombombomb)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">https://unityroom.com/games/bombombomb</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">BomBomBomb | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/bombombomb" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/icon_20201230_221610.png)">
-</div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/danmaku_g)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/danmaku_g" rel = "nofollow" target = "_blank">https://unityroom.com/games/danmaku_g</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/danmaku_g" rel = "nofollow" target = "_blank">弾幕G獄 | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/danmaku_g" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/icon_20200824_212925.gif)">
-</div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/caravanstars)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">https://unityroom.com/games/caravanstars</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">Caravan Stars | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/caravanstars" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/Screenshot_5.png)">
-</div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/poker_rush)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/poker_rush" rel = "nofollow" target = "_blank">https://unityroom.com/games/poker_rush</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/poker_rush" rel = "nofollow" target = "_blank">PokerRush | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/poker_rush" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/ScreenShot_512x512_2019-10-23_02-45-41.png)">
-</div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/sf-fighter)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/sf-fighter" rel = "nofollow" target = "_blank">https://unityroom.com/games/sf-fighter</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/sf-fighter" rel = "nofollow" target = "_blank">SF Fighter | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/sf-fighter" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/ScreenShot_960x540_2019-09-18_20-43-59.png)">
-</div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/block_connect)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/block_connect" rel = "nofollow" target = "_blank">https://unityroom.com/games/block_connect</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/block_connect" rel = "nofollow" target = "_blank">Block Connect | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/block_connect" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/icon.png)">
-</div></a></span></div>
-<div class="bcard-wrapper"> <span class="bcard-header withgfav"><div class="bcard-favicon" style="background-image: url(https://www.google.com/s2/favicons?domain=https://unityroom.com/games/select10)"></div><div class = "bcard-url">
-							<a href = "https://unityroom.com/games/select10" rel = "nofollow" target = "_blank">https://unityroom.com/games/select10</a></div></span><span class = "bcard-main withogimg"><div class = "bcard-title"><a href = "https://unityroom.com/games/select10" rel = "nofollow" target = "_blank">select10 | フリーゲーム投稿サイト unityroom</a>
-</div><div class = "bcard-description"></div>
-<a href = "https://unityroom.com/games/select10" rel = "nofollow" target = "_blank">
-<div class = "bcard-img" style = "background-image: url(img/ScreenShot_640x360_2018-11-22_22-32-14.png)">
-</div></a></span></div>
 
 </div>
 
