--- a/tools/index.html
+++ b/tools/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -15,10 +15,11 @@
 <div class="side">
 <a href="index.html">デスクトップアプリ</a><br>
 <br>
-<a href="nkf-gui.html">nkf-gui<!-- omit in toc --></a><br>
-<a href="vcpkg-gui.html">vcpkg-gui <!-- omit in toc --></a><br>
-<a href="uecpptool.html">UECPPTool<!-- omit in toc --></a><br>
-<a href="Utotribyu.html">Utotribyu<!-- omit in toc --></a><br>
+<a href="nkf-gui.html">nkf-gui</a><br>
+<a href="vcpkg-gui.html">vcpkg-gui</a><br>
+<a href="uecpptool.html">UECPPTool</a><br>
+<a href="Utotribyu.html">Utotribyu</a><br>
+<a href="xtFOJP.html">xtFOJP</a><br>
 <br>
 <a href="etc.html">その他</a><br>
 </div> 
@@ -27,9 +28,10 @@
 <p><strong>作ったデスクトップアプリをまとめる場所</strong></p>
 <ul>
 <li>現状Qtベースで作っているので一先ず優先</li>
-<li>C#で作ったものも、まとめる予定</li>
+<li><del>C#で作ったものも、まとめる予定</del> kiがのらない</li>
 </ul>
 <h2 id="履歴">履歴</h2>
+<p>2022-11-05 xtFOJP を追加した</p>
 <p>2022-10-22 ページ作った</p>
 <hr />
 <p><a href="../index.html">トップページ</a></p>
