--- a/tools/nkf-gui.html
+++ b/tools/nkf-gui.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -15,15 +15,16 @@
 <div class="side">
 <a href="index.html">デスクトップアプリ</a><br>
 <br>
-<a href="nkf-gui.html">nkf-gui<!-- omit in toc --></a><br>
-<a href="vcpkg-gui.html">vcpkg-gui <!-- omit in toc --></a><br>
-<a href="uecpptool.html">UECPPTool<!-- omit in toc --></a><br>
-<a href="Utotribyu.html">Utotribyu<!-- omit in toc --></a><br>
+<a href="nkf-gui.html">nkf-gui</a><br>
+<a href="vcpkg-gui.html">vcpkg-gui</a><br>
+<a href="uecpptool.html">UECPPTool</a><br>
+<a href="Utotribyu.html">Utotribyu</a><br>
+<a href="xtFOJP.html">xtFOJP</a><br>
 <br>
 <a href="etc.html">その他</a><br>
 </div> 
 <div class="content">
-<h1 id="nkf-gui">nkf-gui<!-- omit in toc --></h1>
+<h1 id="nkf-gui">nkf-gui</h1>
 <p><strong>nkfをGUIで扱うツール</strong></p>
 <p>コンセプトは<code>パッと放り込んでパッと確認してパッと変換！！</code></p>
 <ul>
@@ -32,7 +33,7 @@
 <li><a href="#ダウンロード">ダウンロード</a></li>
 <li><a href="#リポジトリ">リポジトリ</a></li>
 </ul>
-<p><img src="img/nkf-gui.png" /></p>
+<p><img src="img/nkf-gui.webp" /></p>
 <h2 id="機能">機能</h2>
 <ul>
 <li>妙な文字コードが紛れていたら色で強調表示</li>
