--- a/unreal/index.html
+++ b/unreal/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -37,7 +37,7 @@
 UnrealEngineは4.26から触り始めたので、それ以前のバージョンについてはあまり知りません。<br />
 また5.0以降のバージョンはチョット重いんで触ってませんが、基本はあまり変わってなさそうなので今のところはいいかなと。</p>
 <hr />
-<p><a href="../index.html">戻る</a></p>
+<p><a href="../index.html">トップページ</a></p>
 
 </div>
 </article>
