--- a/unreal/notes.html
+++ b/unreal/notes.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
