--- a/diary/2022-09-30.html
+++ b/diary/2022-09-30.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 </head>
 <title>hananoki.github.io</title>
-<link href="../img/favicon.png" rel="icon" type="image/png">
+<link href="../img/favicon.webp" rel="icon" type="image/png">
 <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c|Nanum+Gothic|Roboto" rel="stylesheet" />
 <link href="../css/side.css" rel="stylesheet">
 <link href="../css/markdown7_side.css" rel="stylesheet">
@@ -15,10 +15,16 @@
 <div class="side">
 <p><a href="2022-09-29.html">自分でSpawnActorしたカメラがアクティブな表示にならない</a></p>
 <p><a href="2022-09-30.html">Delayノードのキャンセル (悩)</a></p>
+<p><a href="2022-10-24.html">いいかもしれない、WebP</a></p>
 </div> 
 <div class="content">
 <h4 id="section">2022-09-30</h4>
 <h1 id="delayノードのキャンセル-悩">Delayノードのキャンセル (悩)</h1>
+<ul>
+<li><a href="#Unreal Engine Forums  ">Unreal Engine Forums  </a></li>
+<li><a href="#要約すると">要約すると</a></li>
+<li><a href="#おわりに">おわりに</a></li>
+</ul>
 <h2 id="unreal-engine-forums">Unreal Engine Forums</h2>
 <p><code>2017年の情報なので最新バージョンとは異なる可能性があります</code></p>
 <p><a
