--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <div id="container">
 
 <h1 id="hananoki.github.io">hananoki.github.io</h1>
-<script src="https://kit.fontawesome.com/43e3713d1d.js" crossorigin="anonymous"></script>
 <p><a href="https://github.com/hananoki">GitHub</a> | <a
 href="https://twitter.com/kinohanya">Twitter</a> | <a
 href="tools/index.html">デスクトップアプリ</a> | <a
@@ -22,12 +21,11 @@ href="unreal/index.html">UE4の備忘録</a> | <a
 href="gamedev/index.html">ゲーム制作関連</a> | <a
 href="diary/2022-10-24.html">日記超</a> | <a
 href="memo/DIK.html">メモ超</a></p>
-<!--
-<script src="https://kit.fontawesome.com/43e3713d1d.js" crossorigin="anonymous"></script>
-<i class="fa-brands fa-github fa-2x"></i>
--->
 <h2 id="更新情報">更新情報</h2>
-<p>2022-10-25 トップページから各種ページに分離した</p>
+<p><a href="tools/MO2IL.html">2023-01-22 MO2IL を追加した</a></p>
+<p><a href="tools/xtFOJP.html">2022-11-05 xtFOJP を追加した</a></p>
+<p><a href="tools/index.html">2022-10-25
+トップページから各種ページに分離した</a></p>
 <p><a href="diary/2022-10-24.html">2022-10-24
 いいかもしれない、WebP</a></p>
 <p><a href="tools/index.html">2022-10-22
