--- a/tools/etc.html
+++ b/tools/etc.html
@@ -15,6 +15,7 @@
 <div class="side">
 <a href="index.html">デスクトップアプリ</a><br>
 <br>
+<a href="MO2IL.html">MO2IL</a><br>
 <a href="nkf-gui.html">nkf-gui</a><br>
 <a href="vcpkg-gui.html">vcpkg-gui</a><br>
 <a href="uecpptool.html">UECPPTool</a><br>
