--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ href="gamedev/index.html">ゲーム制作関連</a> | <a
 href="diary/2022-10-24.html">日記超</a> | <a
 href="memo/DIK.html">メモ超</a></p>
 <h2 id="更新情報">更新情報</h2>
+<p><a href="tools/FolderManager.html">2023-01-29 FolderManager
+を追加した</a></p>
 <p><a href="tools/MO2IL.html">2023-01-22 MO2IL を追加した</a></p>
 <p><a href="tools/xtFOJP.html">2022-11-05 xtFOJP を追加した</a></p>
 <p><a href="tools/index.html">2022-10-25
