--- a/tools/index.html
+++ b/tools/index.html
@@ -15,6 +15,7 @@
 <div class="side">
 <a href="index.html">デスクトップアプリ</a><br>
 <br>
+<a href="FolderManager.html">FolderManager</a><br>
 <a href="MO2IL.html">MO2IL</a><br>
 <a href="nkf-gui.html">nkf-gui</a><br>
 <a href="vcpkg-gui.html">vcpkg-gui</a><br>
@@ -32,6 +33,7 @@
 <li><del>C#で作ったものも、まとめる予定</del> kiがのらない</li>
 </ul>
 <h2 id="履歴">履歴</h2>
+<p>2023-01-29 FolderManager を追加した</p>
 <p>2023-01-22 MO2IL を追加した</p>
 <p>2022-11-05 xtFOJP を追加した</p>
 <p>2022-10-22 ページ作った</p>
