--- a/tools/FolderManager.html
+++ b/tools/FolderManager.html
@@ -31,6 +31,7 @@
 <ul>
 <li><a href="#特徴">特徴</a></li>
 <li><a href="#現状の問題点">現状の問題点</a></li>
+<li><a href="#変更履歴">変更履歴</a></li>
 <li><a href="#ダウンロード">ダウンロード</a></li>
 <li><a href="#リポジトリ">リポジトリ</a></li>
 </ul>
@@ -49,11 +50,11 @@
 <ul>
 <li>コンテキストメニュー等、あると便利なものはもう少し仕様が固まってからの予定</li>
 </ul></li>
-<li>ジャンクションのターゲットが不明
+<li><del>ジャンクションのターゲットが不明</del>
 <ul>
-<li>Qt5.15の段階では取得出来ない
+<li><del>Qt5.15の段階では取得出来ない</del>
 <ul>
-<li>「Qt6に更新」or 「APIを叩く」のどちらか</li>
+<li><del>「Qt6に更新」or 「APIを叩く」のどちらか</del></li>
 </ul></li>
 </ul></li>
 <li>アイコンの取得に時間が掛かる場合がある
@@ -64,9 +65,36 @@
 </ul></li>
 </ul></li>
 </ul>
+<h2 id="変更履歴">変更履歴</h2>
+<h3 id="rev.9---2023-02-04">[rev.9] - 2023-02-04</h3>
+<h4 id="added">Added</h4>
+<ul>
+<li>SendTo内のショートカットをコンテキストメニューに展開するようにした</li>
+<li>削除を使えるようにした</li>
+<li>指定したフォルダ以下の容量計算を可能にした</li>
+<li>上のフォルダに行けるようにした</li>
+</ul>
+<h4 id="changed">Changed</h4>
+<ul>
+<li>UIをありがちな感じにした</li>
+<li>シンボリックリンク等、ダブルクリックしたらそこにフォーカスするようにした</li>
+<li>キャッシュデータフォーマットを変更した
+<ul>
+<li>以前のキャッシュは検知して読み込まない</li>
+</ul></li>
+</ul>
+<h3 id="rev.2---2023-01-29">[rev.2] - 2023-01-29</h3>
+<ul>
+<li>initial commit</li>
+</ul>
 <h2 id="ダウンロード">ダウンロード</h2>
+<ul>
+<li><p>今回のバージョンは<font color=red>Trojan:Script/Wacatac.H!ml</font>が検出される可能性があります</p></li>
+<li><p><a
+href="https://www.google.com/search?q=trojan%3Ascript%2Fwacatac.H!ml&amp;ie=UTF-8">https://www.google.com/search?q=trojan%3Ascript%2Fwacatac.H!ml&amp;ie=UTF-8</a></p></li>
+</ul>
 <p><a
-href="../arcive/FolderManager_rev2.7z">FolderManager_rev2.7z</a></p>
+href="../arcive/FolderManager_rev10.7z">FolderManager_rev10.7z</a></p>
 <h2 id="リポジトリ">リポジトリ</h2>
 <p><a
 href="https://github.com/hananoki/FolderManager">https://github.com/hananoki/FolderManager</a></p>
