--- a/index.html
+++ b/index.html
@@ -22,23 +22,29 @@ href="gamedev/index.html">ゲーム制作関連</a> | <a
 href="diary/2022-10-24.html">日記超</a> | <a
 href="memo/DIK.html">メモ超</a></p>
 <h2 id="更新情報">更新情報</h2>
-<p><a href="tools/FolderManager.html">2023-01-29 FolderManager
-を追加した</a></p>
-<p><a href="tools/MO2IL.html">2023-01-22 MO2IL を追加した</a></p>
-<p><a href="tools/xtFOJP.html">2022-11-05 xtFOJP を追加した</a></p>
+<p><a href="tools/FolderManager.html">2023-02-11 「FolderManager
+rev.16」に更新</a></p>
+<p><a href="tools/FolderManager.html">2023-02-04 「FolderManager
+rev.9」に更新</a></p>
+<p><a href="tools/FolderManager.html">2023-01-29
+「FolderManager」を追加</a></p>
+<p><a href="tools/MO2IL.html">2023-01-22 「MO2ILを追加</a></p>
+<p><a href="tools/xtFOJP.html">2022-11-05 「xtFOJP」を追加</a></p>
 <p><a href="tools/index.html">2022-10-25
-トップページから各種ページに分離した</a></p>
+トップページから各種ページに分離</a></p>
 <p><a href="diary/2022-10-24.html">2022-10-24
 いいかもしれない、WebP</a></p>
 <p><a href="tools/index.html">2022-10-22
-デスクトップアプリのページを作った</a></p>
-<p><a href="tools/uecpptool.html">2022-10-10 UECPPTool rev.49</a></p>
+デスクトップアプリのページを作成</a></p>
+<p><a href="tools/uecpptool.html">2022-10-10 「UECPPTool
+rev.49」に更新</a></p>
 <p><a href="unreal/index.html">2022-10-08
-「UE4関連のメモ」サイドメニューを付けた</a></p>
-<p><a href="tools/uecpptool.html">2022-10-07 UECPPTool rev.45</a></p>
-<p><a href="kg/2022-09-30.html">2022-09-30 Delayノードのキャンセル
+「UE4関連のメモ」サイドメニューを追加</a></p>
+<p><a href="tools/uecpptool.html">2022-10-07 「UECPPTool
+rev.45」に更新</a></p>
+<p><a href="diary/2022-09-30.html">2022-09-30 Delayノードのキャンセル
 (悩)</a></p>
-<p><a href="kg/2022-09-29.html">2022-09-29
+<p><a href="diary/2022-09-29.html">2022-09-29
 自分でSpawnActorしたカメラがアクティブな表示にならない</a></p>
 
 </div>
